--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
@@ -17,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WebViewApplication"
         tools:targetApi="31">
+        <activity
+            android:name=".WebActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
